# strip-milp-3d

./: CMakeLists.txt  README.md  vcpkg.json
include/: BranchStrategy.h  ConvexNFPUtilities.h  MILPTask.h
solutions/: STOYAN_2005_05_ITEMS.json  STOYAN_2005_08_ITEMS.json  STOYAN_2005_09_ITEMS.json  STOYAN_2005_10_ITEMS.json  STOYAN_2005_EXAMPLE_1.json
src/: ConvexNFPUtilities.cpp
targets/: BenchmarkMILP.cpp  RunMILP.cpp  VisualizeSlices.cpp  VisualizeSolution.cpp
